# agent-client-kernel

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  VERIFICATION.md  acp-gateway.sh  acp_gateway.py  lite-demo.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_client.html
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cagent/: Dockerfile  devcontainer.json
.devcontainer/codex/: Dockerfile  devcontainer.json
.devcontainer/gemini/: Dockerfile  devcontainer.json
.devcontainer/goose/: Dockerfile  devcontainer.json
.devcontainer/kimi/: Dockerfile  devcontainer.json
agent_client_kernel/: __init__.py  __main__.py  install.py  kernel.py
agent_client_kernel/kernelspec/: kernel.json
agentclientkernel/: __main__.py  install.py  kernel.py
agentclientkernel/magics/: agent_config_magic.py  agent_magic.py  mcp_magic.py  permissions_magic.py  session_magic.py
docs/: jupyter-lite.json
examples/: basic_usage.ipynb  configuration_demo.ipynb  demo.py  example_usage.md  jupyter-mcp.ipynb  max_of_three.py  plot_function.ipynb  plot_function_with_color.ipynb  sum_squares.ipynb
lite-kernel/: package-lock.json  package.json
lite-kernel/src/: ChatHttpKernel.ts  federation.ts  index.ts  kernel.ts
lite-site/: jupyter-lite.json  jupyter_lite_config.json  patch-pageconfig.js
lite-site/extensions/lite-kernel/: index.js
scripts/: build-lite.sh  find_pattern.py  patch_bundles.py
src/: ChatHttpKernel.ts  LiteShimKernel.ts  browser-demo.ts  test-chat-http.ts  test-lite-shim.ts
tests/: mock_agent.py  test_integration.py  test_kernel.py
