[project]
name = "agentclientkernel"
version = "0.1.0"
description = "A Jupyter Kernel for Agent Client Protocol using MetaKernel"
authors = [
    { name = "Jim White", email = "jim@jimwhite.net" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["ACP", "agent", "IPython", "Jupyter", "kernel"]
requires-python = ">=3.10"
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ipykernel<7.0",
    "jupyter-client<8.0",
    "agent-client-protocol>=0.4.0",
    "metakernel @ git+https://github.com/jimwhite/metakernel.git",
    "nest-asyncio>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/jimwhite/agent-client-kernel"
Repository = "https://github.com/jimwhite/agent-client-kernel"

[project.scripts]
jupyter-agentclientkernel = "agentclientkernel.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentclientkernel"]

[tool.setuptools.package-data]
agentclientkernel = ["resources/*.png"]
